# siridb-server

./: (null)brumedb-series.json  .gitignore  CMakeLists.txt
include/base64/: base64.h
include/siri/cfg/: cfg.h
include/siri/db/: db.h  groups.h  insert.h  lookup.h  series.h  server.h  servers.h
include/siri/grammar/: grammar.h
src/base64/: base64.c
src/hashmap/: hashmap.c
src/siri/: backup.c  heartbeat.c  optimize.c  siri.c
src/siri/cfg/: cfg.c
src/siri/db/: auth.c  db.c  groups.c  insert.c  lookup.c  props.c  reindex.c  series.c  server.c  servers.c  shard.c  shards.c  users.c
src/siri/grammar/: grammar.c
src/siri/net/: bserver.c  clserver.c
src/siri/parser/: listener.c
