cmake_minimum_required(VERSION 3.6)
project(siridb-server)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DDEBUG=1 -Wall")

set(SOURCE_FILES
        include/argparse/argparse.h
        include/cexpr/cexpr.h
        include/cfgparser/cfgparser.h
        include/cleri/children.h
        include/cleri/choice.h
        include/cleri/expecting.h
        include/cleri/grammar.h
        include/cleri/keyword.h
        include/cleri/kwcache.h
        include/cleri/list.h
        include/cleri/node.h
        include/cleri/object.h
        include/cleri/olist.h
        include/cleri/optional.h
        include/cleri/parse.h
        include/cleri/prio.h
        include/cleri/regex.h
        include/cleri/repeat.h
        include/cleri/rule.h
        include/cleri/sequence.h
        include/cleri/this.h
        include/cleri/token.h
        include/cleri/tokens.h
        include/ctree/ctree.h
        include/expr/expr.h
        include/imap/imap.h
        include/imap32/imap32.h
        include/iso8601/iso8601.h
        include/llist/llist.h
        include/lock/lock.h
        include/logger/logger.h
        include/motd/motd.h
        include/owcrypt/owcrypt.h
        include/procinfo/procinfo.h
        include/qpack/qpack.h
        include/siri/args/args.h
        include/siri/cfg/cfg.h
        include/siri/db/access.h
        include/siri/db/aggregate.h
        include/siri/db/auth.h
        include/siri/db/buffer.h
        include/siri/db/db.h
        include/siri/db/ffile.h
        include/siri/db/fifo.h
        include/siri/db/group.h
        include/siri/db/groups.h
        include/siri/db/initsync.h
        include/siri/db/insert.h
        include/siri/db/lookup.h
        include/siri/db/median.h
        include/siri/db/misc.h
        include/siri/db/nodes.h
        include/siri/db/pcache.h
        include/siri/db/points.h
        include/siri/db/pool.h
        include/siri/db/pools.h
        include/siri/db/presuf.h
        include/siri/db/props.h
        include/siri/db/query.h
        include/siri/db/re.h
        include/siri/db/replicate.h
        include/siri/db/series.h
        include/siri/db/server.h
        include/siri/db/servers.h
        include/siri/db/shard.h
        include/siri/db/shards.h
        include/siri/db/time.h
        include/siri/db/user.h
        include/siri/db/users.h
        include/siri/db/variance.h
        include/siri/db/walker.h
        include/siri/file/handler.h
        include/siri/file/pointer.h
        include/siri/grammar/grammar.h
        include/siri/grammar/gramp.h
        include/siri/help/help.h
        include/siri/net/bserver.h
        include/siri/net/clserver.h
        include/siri/net/pkg.h
        include/siri/net/promise.h
        include/siri/net/promises.h
        include/siri/net/protocol.h
        include/siri/net/socket.h
        include/siri/parser/listener.h
        include/siri/parser/queries.h
        include/siri/async.h
        include/siri/backup.h
        include/siri/err.h
        include/siri/heartbeat.h
        include/siri/optimize.h
        include/siri/siri.h
        include/siri/version.h
        include/slist/slist.h
        include/strextra/strextra.h
        include/test/test.h
        include/timeit/timeit.h
        include/xmath/xmath.h
        include/xpath/xpath.h
        src/argparse/argparse.c
        src/cexpr/cexpr.c
        src/cfgparser/cfgparser.c
        src/cleri/children.c
        src/cleri/choice.c
        src/cleri/expecting.c
        src/cleri/grammar.c
        src/cleri/keyword.c
        src/cleri/kwcache.c
        src/cleri/list.c
        src/cleri/node.c
        src/cleri/object.c
        src/cleri/olist.c
        src/cleri/optional.c
        src/cleri/parse.c
        src/cleri/prio.c
        src/cleri/regex.c
        src/cleri/repeat.c
        src/cleri/rule.c
        src/cleri/sequence.c
        src/cleri/this.c
        src/cleri/token.c
        src/cleri/tokens.c
        src/ctree/ctree.c
        src/expr/expr.c
        src/imap/imap.c
        src/iso8601/iso8601.c
        src/llist/llist.c
        src/lock/lock.c
        src/logger/logger.c
        src/motd/motd.c
        src/owcrypt/owcrypt.c
        src/procinfo/procinfo.c
        src/qpack/qpack.c
        src/siri/args/args.c
        src/siri/cfg/cfg.c
        src/siri/db/access.c
        src/siri/db/aggregate.c
        src/siri/db/auth.c
        src/siri/db/buffer.c
        src/siri/db/db.c
        src/siri/db/ffile.c
        src/siri/db/fifo.c
        src/siri/db/group.c
        src/siri/db/groups.c
        src/siri/db/initsync.c
        src/siri/db/insert.c
        src/siri/db/lookup.c
        src/siri/db/median.c
        src/siri/db/misc.c
        src/siri/db/nodes.c
        src/siri/db/pcache.c
        src/siri/db/points.c
        src/siri/db/pool.c
        src/siri/db/pools.c
        src/siri/db/presuf.c
        src/siri/db/props.c
        src/siri/db/query.c
        src/siri/db/re.c
        src/siri/db/replicate.c
        src/siri/db/series.c
        src/siri/db/server.c
        src/siri/db/servers.c
        src/siri/db/shard.c
        src/siri/db/shards.c
        src/siri/db/time.c
        src/siri/db/user.c
        src/siri/db/users.c
        src/siri/db/variance.c
        src/siri/db/walker.c
        src/siri/file/handler.c
        src/siri/file/pointer.c
        src/siri/grammar/grammar.c
        src/siri/help/help.c
        src/siri/net/bserver.c
        src/siri/net/clserver.c
        src/siri/net/pkg.c
        src/siri/net/promise.c
        src/siri/net/promises.c
        src/siri/net/protocol.c
        src/siri/net/socket.c
        src/siri/parser/listener.c
        src/siri/parser/queries.c
        src/siri/async.c
        src/siri/backup.c
        src/siri/err.c
        src/siri/heartbeat.c
        src/siri/optimize.c
        src/siri/siri.c
        src/siri/version.c
        src/slist/slist.c
        src/strextra/strextra.c
        src/test/test.c
        src/timeit/timeit.c
        src/xmath/xmath.c
        src/xpath/xpath.c
        main.c)

include_directories(include)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

target_link_libraries (${PROJECT_NAME} uv)
target_link_libraries (${PROJECT_NAME} uuid)
target_link_libraries (${PROJECT_NAME} m)
target_link_libraries (${PROJECT_NAME} pcre)
target_link_libraries (${PROJECT_NAME} crypt)